@@ -4,20 +4,19 @@ import org.junit.Test;
 
 import java.util.List;
 import java.util.concurrent.atomic.AtomicBoolean;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static org.junit.Assert.*;
 
-public class SequentialGroupingStreamExampleTestCase {
+public class SequentialGroupingStreamTestCase {
 
     @Test
-    public void grouping_by_sequentally_equal_elements_works_correctly_without_missing_first_and_last_stream_elements() {
+    public void grouping_by_sequentially_equal_elements_works_correctly_without_missing_first_and_last_stream_elements() {
         final Stream<List<String>> stream = SequentialGroupingStream.stream(
                 Stream.of("1", "1", "2", "2", "2", "3", "4", "4", "1"), 
-                (el, group) -> group.isEmpty() || group.get(0).equals(el));
+                (el, group) -> group.isEmpty() || group.getFirst().equals(el));
         
-        final List<List<String>> groups = stream.collect(Collectors.toList());
+        final List<List<String>> groups = stream.toList();
 
         assertEquals(5, groups.size());
         
@@ -47,7 +46,7 @@ public class SequentialGroupingStreamExampleTestCase {
                 Stream.of("1", "1", "2", "2", "2", "3", "4", "4", "1"), 
                 (el, group) -> group.size() < 2);
         
-        final List<List<String>> groups = stream.collect(Collectors.toList());
+        final List<List<String>> groups = stream.toList();
 
         assertEquals(5, groups.size());
         
@@ -77,7 +76,7 @@ public class SequentialGroupingStreamExampleTestCase {
                 Stream.of("1", "1", "2", "2", "2", "3", "4", "4", "1", "5"), 
                 (el, group) -> group.size() < 2);
         
-        final List<List<String>> groups = stream.collect(Collectors.toList());
+        final List<List<String>> groups = stream.toList();
 
         assertEquals(5, groups.size());
         
@@ -109,7 +108,7 @@ public class SequentialGroupingStreamExampleTestCase {
                 Stream.of("1"), 
                 (el, group) -> group.size() < 2);
         
-        final List<List<String>> groups = stream.collect(Collectors.toList());
+        final List<List<String>> groups = stream.toList();
 
         assertEquals(1, groups.size());
         
@@ -121,7 +120,7 @@ public class SequentialGroupingStreamExampleTestCase {
     public void grouping_an_empty_stream_produces_an_empty_stream() {
         final Stream<List<String>> stream = SequentialGroupingStream.stream(Stream.of(), (valueToCheck, list) -> list.size() < 2);
         
-        final List<List<String>> groups = stream.collect(Collectors.toList());
+        final List<List<String>> groups = stream.toList();
         
         assertEquals(0, groups.size());
     }
@@ -132,7 +131,7 @@ public class SequentialGroupingStreamExampleTestCase {
                 Stream.of("1", "1", "2"), 
                 (el, group) -> "non existing".equals(el));
         
-        final List<List<String>> groups = stream.collect(Collectors.toList());
+        final List<List<String>> groups = stream.toList();
 
         assertEquals(3, groups.size());
 
@@ -154,7 +153,7 @@ public class SequentialGroupingStreamExampleTestCase {
                 baseStream,
                 (el, group) -> group.isEmpty() || group.getFirst().equals(el))) {
             // run a terminal operation
-            final List<List<String>> groups = stream.collect(Collectors.toList());
+            final List<List<String>> groups = stream.toList();
             assertEquals(2, groups.size());
             assertFalse("Base stream was closed prematurely.", baseStreamIsClosed.get());
         }
